--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>learn</title>
   </head>
   <body>
+    <h3>Ezhil Manjula</h3>
+    <h1>We can learn dom object model</h1>
+    <ul>
+      <li>Add content</li>
+      <li>Delete contnet</li>
+      <li>Change content</li>
+    </ul>
     <script src="Script.js"></script>
   </body>
 </html>
