--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>learn</title>
-  </head>
-  <body>
-    <h3>Ezhil Manjula</h3>
-    <h1>We can learn dom object model</h1>
-    <ul>
-      <li>Add content</li>
-      <li>Delete contnet</li>
-      <li>Change content</li>
-    </ul>
-    <script src="Script.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <section>
+    <div class="devclock"></div>
+    <h1>This is Heading</h1>
+  <script src="Script.js"></script>
+</body>
 </html>
