--- a/index.html
+++ b/index.html
@@ -4,11 +4,42 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <!-- <style>
+    .box {
+      width: 150px;
+      height: 150px;
+      background-color: palegreen;
+      font-size: 20px;
+      line-height: 150px;
+      margin-bottom: 20px;
+      text-align: center;
+    }
+
+    .new-color {
+      color: orange;
+      background-color: #222;
+    }
+
+  </style> -->
 </head>
 <body>
-  <section>
-    <div class="devclock"></div>
-    <h1>This is Heading</h1>
+  <!-- <div class="box">box</div>
+  <button id="btnAdd">Add</button>
+  <button id="btnRemove">Remove</button>
+  <button id="btnToggle">Toggle</button>
+  <script src="Script.js"></script> -->
+
+  <!-- <input type="text" id="textName" />
+  <button id="btnClick">Click</button> -->
+  
+
+  <!-- <h3>Javascript DOM Enent Handlers</h3>
+  <button class="alert">Click Me</button> -->
+
+  <h1>Keyboard Event in Javascript</h1>
+  <label for="input-num">Enter a Number</label>
+  <input type="text" id="input-num" />
+  <p id="error"></p>
   <script src="Script.js"></script>
 </body>
 </html>
